Update impress and print ouf pdfs

--- a/index_fr.html
+++ b/index_fr.html
@@ -69,8 +69,10 @@
 	<div class="meta_wrap block">
 		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Wild Sheep Studio en tant que Gameplay Programmer pour le jeu Wild.</p>
 	</div>
-	<h2>Dernier Projet : <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(jouer sur itch.io)</a></h2>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/ds1YAITA1Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<div id="highlight_wrap">
+		<h2>Dernier Projet : <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(jouer sur itch.io)</a></h2>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/ds1YAITA1Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 	<h2>Technologies</h2>
 	<div class="technologies block">
 		<div class="techno">
