Add Leikir studio

--- a/index_fr.html
+++ b/index_fr.html
@@ -67,10 +67,10 @@
 	</div>
 	<!--<h2>Qui suis-je</h2>-->
 	<div class="meta_wrap block">
-		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Wild Sheep Studio en tant que Gameplay Programmer pour le jeu Wild.</p>
+		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Leikir Studio en tant que Gameplay Programmer sur un projet de jeu non annoncé.</p>
 	</div>
 	<div id="highlight_wrap">
-		<h2>Dernier Projet : <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(jouer sur itch.io)</a></h2>
+		<h2>Dernier Projet Personnel : <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(jouer sur itch.io)</a></h2>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/ds1YAITA1Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<h2>Technologies</h2>
@@ -102,10 +102,18 @@
 	<h2>Expériences professionnelles</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/Leikir.jpg" />
+			<div class="job">
+				<h3>Gameplay Programmer à <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
+				<h4>Mars 2019 - Présent</h4>
+				<p>Programmation généraliste et gameplay sur un projet de jeu non-annoncé, utilisant le moteur Unity et C#.</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/wild.jpg" />
 			<div class="job">
 				<h3>Gameplay Programmer à <a href="https://wildsheepstudio.com/" target="_blank">Wild Sheep Studio</a></h3>
-				<h4>Septembre 2017 - Présent</h4>
+				<h4>Septembre 2017 - Janvier 2019</h4>
 				<p>Programmation gameplay et 3C sur le jeu Wild.</p>
 			</div>
 		</div>
@@ -161,7 +169,7 @@
 			</div>
 		</div>
 	</div>
-	<h2>Projets</h2>
+	<h2>Projets Perso</h2>
 	<div class="project_wrap block">
 
 		<div class="project">
