--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	</div>
 	<!--<h2>Qui suis-je</h2>-->
 	<div class="meta_wrap block">
-		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Wild Sheep Studio en tant que Gameplay Programmer pour le jeu Wild.</p>
+		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Leikir Studio en tant que Gameplay Programmer sur un projet de jeu non annoncé.</p>
 	</div>
 	<div id="highlight_wrap">
 		<h2>Latest Side-Project: <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(play on itch.io)</a></h2>
@@ -102,10 +102,18 @@
 	<h2>Work Experience</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/Leikir.jpg" />
+			<div class="job">
+				<h3>Gameplay Programmer at <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
+				<h4>March 2019 - Present</h4>
+				<p>Gameplay programming on an unannounced project, using Unity engine and C#.</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/wild.jpg" />
 			<div class="job">
 				<h3>Gameplay Programmer at <a href="https://wildsheepstudio.com/" target="_blank">Wild Sheep Studio</a></h3>
-				<h4>September 2017 - Present</h4>
+				<h4>September 2017 - January 2019</h4>
 				<p>Gameplay programming on <em>Wild</em>.</p>
 			</div>
 		</div>
@@ -161,7 +169,7 @@
 			</div>
 		</div>
 	</div>
-	<h2>Projects</h2>
+	<h2>Personal Projects</h2>
 	<div class="project_wrap block">
 
 		<div class="project">
