--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@
 	<div class="project_wrap block">
 
 		<div class="project">
+			<img class="logo" src="img/TreadLightly.png" />
+			<div class="job">
+				<h3><a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">Tread Lightly</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">https://vonrickroll.itch.io/tread-lightly</a></h4>
+				<p>Spooky game where you must find your way through a dark mansion, having only one light bulb in your posession. Will you be able to piece together the clues of your own story? Entry for the GTMK Jam 2019, playable in your browser.</p>
+			</div>
+		</div>
+
+		<div class="project">
 			<img class="logo" src="img/VBG_Concept.jpg" />
 			<div class="job">
 				<h3><a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">Very Bad Greeks</a></h3>
