--- a/index_fr.html
+++ b/index_fr.html
@@ -173,6 +173,15 @@
 	<div class="project_wrap block">
 
 		<div class="project">
+			<img class="logo" src="img/TreadLightly.png" />
+			<div class="job">
+				<h3><a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">Tread Lightly</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">https://vonrickroll.itch.io/tread-lightly</a></h4>
+				<p>Jeu d'intrigue où perdu.e dans l'obscurité d'un manoir étrange vous devrez retrouver toutes les pièces de votre propre histoire, muni.e d'une seule ampoule pour vous éclairer. Participation à la GMTK Jam 2019. Jouable dans votre navigateur.</p>
+			</div>
+		</div>
+
+		<div class="project">
 			<img class="logo" src="img/VBG_Concept.jpg" />
 			<div class="job">
 				<h3><a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">Very Bad Greeks</a></h3>
