Add Hamsterstellar and Rogue Lords

--- a/index_fr.html
+++ b/index_fr.html
@@ -106,7 +106,7 @@
 			<div class="job">
 				<h3>Gameplay Programmer à <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
 				<h4>Mars 2019 - Présent</h4>
-				<p>Programmation généraliste et gameplay sur un projet de jeu non-annoncé, utilisant le moteur Unity et C#.</p>
+				<p>Programmation généraliste et gameplay sur <a href="https://www.youtube.com/watch?v=H3PVRJVv_8w" target="_blank">Rogue Lords</a>, jeu de combat tour par tour multi-plateformes, utilisant le moteur Unity et C#.</p>
 			</div>
 		</div>
 		<div class="work">
@@ -173,6 +173,15 @@
 	<div class="project_wrap block">
 
 		<div class="project">
+			<img class="logo" src="img/hamsterstellar.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">Hamsterstellar</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">https://LeonardA-L.github.io/GGJ2020/</a></h4>
+				<p>Jeu de sandbox physique chaotique où vous devez construire un vaisseau spatiale à partir de pièces détachées absolument pas prévues pour. Participation à la Global Game Jam 2020. Jouable dans votre navigateur.</p>
+			</div>
+		</div>
+
+		<div class="project">
 			<img class="logo" src="img/TreadLightly.png" />
 			<div class="job">
 				<h3><a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">Tread Lightly</a></h3>
@@ -208,6 +217,7 @@
 			</div>
 		</div>
 
+<!--
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
 			<div class="job">
@@ -216,6 +226,7 @@
 				<p>Version web du jeu de carte traditionel. Jouable à deux joueurs en ligne.</p>
 			</div>
 		</div>
+-->
 	</div>
 </div>
 </body>
