--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="job">
 				<h3>Gameplay Programmer at <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
 				<h4>March 2019 - Present</h4>
-				<p>Gameplay programming on an unannounced project, using Unity engine and C#.</p>
+				<p>Gameplay programming on <a href="https://www.youtube.com/watch?v=H3PVRJVv_8w" target="_blank">Rogue Lords</a> multi-platform fighting game, using Unity engine and C#.</p>
 			</div>
 		</div>
 		<div class="work">
@@ -173,6 +173,15 @@
 	<div class="project_wrap block">
 
 		<div class="project">
+			<img class="logo" src="img/hamsterstellar.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">Hamsterstellar</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">https://LeonardA-L.github.io/GGJ2020/</a></h4>
+				<p>Chaotic physics-based game where you build your spaceship out of random scrap parts. Entry for the Global Game Jam 2020, playable in your browser.</p>
+			</div>
+		</div>
+
+		<div class="project">
 			<img class="logo" src="img/TreadLightly.png" />
 			<div class="job">
 				<h3><a target="_blank" href="https://vonrickroll.itch.io/tread-lightly">Tread Lightly</a></h3>
@@ -207,7 +216,7 @@
 				<p>Allows you to create your own version of the Bayeux tapestry, exported as JPG or animated GIF.</p>
 			</div>
 		</div>
-
+<!--
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
 			<div class="job">
@@ -216,7 +225,7 @@
 				<p>Web version of the traditionnal French card game. Playable for two people online.</p>
 			</div>
 		</div>
-
+-->
 	</div>
 </div>
 </body>
