Update CV to include Science X Games

--- a/index_fr.html
+++ b/index_fr.html
@@ -102,10 +102,18 @@
 	<h2>Expériences professionnelles</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/sciencexgames.png" />
+			<div class="job">
+				<h3>Gameplay Programmer à <a href="https://sciencexgames.fr/" target="_blank">Science X Games</a></h3>
+				<h4>Septembre 2021 - Présent</h4>
+				<p>Programmation généraliste sur le jeu en cours de production, utilisant le moteur Unity (multi-plateformes, date de sortie non annoncée).</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/Leikir.jpg" />
 			<div class="job">
 				<h3>Gameplay Programmer à <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
-				<h4>Mars 2019 - Présent</h4>
+				<h4>Mars 2019 - Juillet 2021</h4>
 				<p>Programmation généraliste et gameplay sur <a href="https://www.youtube.com/watch?v=H3PVRJVv_8w" target="_blank">Rogue Lords</a>, jeu de combat tour par tour multi-plateformes, utilisant le moteur Unity et C#.</p>
 			</div>
 		</div>
@@ -133,6 +141,7 @@
 				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
+		<!--
 		<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
@@ -149,6 +158,7 @@
 				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
+	-->
 	</div>
 	<h2>Education</h2>
 	<div class="work_wrap block">
