--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="main-title">
 		<h1>Leonard Allain-Launay</h1>
 		<h2>Gameplay Programmer</h2>
-		<a href="mailto:leonard@allain-launay.fr">leonard@allain-launay.fr</a><br>
+		leonard@allain-launay.fr<br>
 		+33 6 85 21 11 47<br>
 		<a href="https://LeonardA-L.github.io">https://LeonardA-L.github.io</a>
 	</div>
@@ -81,7 +81,7 @@
 		</div>
 		<div class="techno">
 			<img src="img/c-sharp.png" />
-			<p>C#</p>
+			<p>C# Game Development</p>
 		</div>
 		<div class="techno">
 			<img src="img/cpp.png" />
@@ -102,10 +102,18 @@
 	<h2>Work Experience</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/sciencexgames.png" />
+			<div class="job">
+				<h3>Gameplay Programmer at <a href="https://sciencexgames.fr/" target="_blank">Science X Games</a></h3>
+				<h4>September 2021 - Present</h4>
+				<p>Gameplay programming on the current unannounced video game project. Using Unity engine and C#.</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/Leikir.jpg" />
 			<div class="job">
 				<h3>Gameplay Programmer at <a href="https://www.leikir-studio.com" target="_blank">Leikir Studio</a></h3>
-				<h4>March 2019 - Present</h4>
+				<h4>March 2019 - July 2021</h4>
 				<p>Gameplay programming on <a href="https://www.youtube.com/watch?v=H3PVRJVv_8w" target="_blank">Rogue Lords</a> multi-platform fighting game, using Unity engine and C#.</p>
 			</div>
 		</div>
@@ -133,7 +141,7 @@
 				<p>Developed games and features for the CodinGame platform, with Pixi.js, Angular/HTML5/SASS for the frontend part, Java and Lua on the backend.</p>
 			</div>
 		</div>
-		<div class="work">
+		<!--<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
 				<h3>Full Stack intern at <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
@@ -148,7 +156,7 @@
 				<h4>June 2014 - September 2014</h4>
 				<p>Developed games and features for the CodinGame platform, with Pixi.js, Angular/HTML5/SASS for the frontend part, Java and Lua on the backend.</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	<h2>Education</h2>
 	<div class="work_wrap block">
