--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
 	<h2>Work Experience</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/pottedcurse.png" />
+			<div class="job">
+				<h3>Freelance Developer at <a href="https://pottedcurse.com/" target="_blank">Potted Curse</a></h3>
+				<h4>January 2023 - Present</h4>
+				<p>Freelance development for various client in Unity (VR, AR, tools), while developping <a href="https://brood-game.com/">Brood</a>.</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/sciencexgames.png" />
 			<div class="job">
 				<h3>Gameplay Programmer at <a href="https://sciencexgames.fr/" target="_blank">Science X Games</a></h3>
@@ -144,6 +152,7 @@
 				<p>Implemented technical solutions to drive the growth of the company in San Francisco and the Bay area. Work on the startup's strategy. CodinGame is an online gaming platform for developers, offering programming games and contests.</p>
 			</div>
 		</div>
+		<!--
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
@@ -152,6 +161,7 @@
 				<p>Developed games and features for the CodinGame platform, with Pixi.js, Angular/HTML5/SASS for the frontend part, Java and Lua on the backend.</p>
 			</div>
 		</div>
+		-->
 		<!--<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
@@ -175,7 +185,7 @@
 			<img class="logo" src="img/gobelins.jpg" />
 			<div class="job">
 				<h3>Post-Master Video games and Transmedia, Gobelins -- Enjmin</h3>
-				<h4>Promotion 2018</h4>
+				<h4>Graduated 2018</h4>
 				<p>Game Design, Level Design, Shaders, Game UI/UX</p>
 			</div>
 		</div>
@@ -183,23 +193,22 @@
 			<img class="logo" src="img/insa.jpg" />
 			<div class="job">
 				<h3>Engineering Master Degree at INSA Lyon, France</h3>
-				<h4>Promotion 2016</h4>
+				<h4>Graduated 2016</h4>
 				<p>Programming, UI/UX, Graphics programming (OpenGL), Hardware Architecture, Networks, Databases, Project management, Algebra, ...</p>
 			</div>
 		</div>
 	</div>
 	<h2>Personal Projects</h2>
 	<div class="project_wrap block">
-
 		<div class="project">
-			<img class="logo" src="img/hamsterstellar.jpg" />
+			<img class="logo" src="img/uselessgamedev.png" />
 			<div class="job">
-				<h3><a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">Hamsterstellar</a></h3>
-				<h4>Unity, C# <a target="_blank" href="https://leonarda-l.github.io/GGJ2020/">https://LeonardA-L.github.io/GGJ2020/</a></h4>
-				<p>Chaotic physics-based game where you build your spaceship out of random scrap parts. Entry for the Global Game Jam 2020, playable in your browser.</p>
+				<h3><a target="_blank" href="https://www.youtube.com/@uselessgamedev">Useless Game Dev Youtube Channel</a></h3>
+				<h4>Unity, C#</h4>
+				<p>Where I make small game prototypes and program silly ideas I have.<br />Helps me scratch the itch to work on new stuff, learn and explore.</p>
 			</div>
 		</div>
-
+		<!--
 		<div class="project">
 			<img class="logo" src="img/TreadLightly.png" />
 			<div class="job">
@@ -235,6 +244,7 @@
 				<p>Allows you to create your own version of the Bayeux tapestry, exported as JPG or animated GIF.</p>
 			</div>
 		</div>
+	-->
 <!--
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
