--- a/index_fr.html
+++ b/index_fr.html
@@ -111,6 +111,14 @@
 	<h2>Expériences professionnelles</h2>
 	<div class="work_wrap block">
 		<div class="work">
+			<img class="logo" src="img/pottedcurse.png" />
+			<div class="job">
+				<h3>Développeur Freelance à <a href="https://pottedcurse.com/" target="_blank">Potted Curse</a></h3>
+				<h4>Janvier 2023 - Présent</h4>
+				<p>Développements variés dans Unity pour différents clients (VR, AR, outils), en parallèle du développement du jeu <a href="https://brood-game.com/">Brood</a>.</p>
+			</div>
+		</div>
+		<div class="work">
 			<img class="logo" src="img/sciencexgames.png" />
 			<div class="job">
 				<h3>Gameplay Programmer à <a href="https://sciencexgames.fr/" target="_blank">Science X Games</a></h3>
@@ -142,6 +150,7 @@
 				<p>Implémentation de solution techniques pour améliorer la croissance de l'entreprise à San Francisco. Travail sur la stratégie de la startup. CodinGame est une plateforme de gaming en ligne pour développeurs proposant des jeux et concours de programmation.</p>
 			</div>
 		</div>
+		<!--
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
@@ -150,6 +159,7 @@
 				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
+		-->
 		<!--
 		<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
@@ -191,6 +201,15 @@
 	<h2>Projets Perso</h2>
 	<div class="project_wrap block">
 
+		<div class="project">
+			<img class="logo" src="img/uselessgamedev.png" />
+			<div class="job">
+				<h3><a target="_blank" href="https://www.youtube.com/@uselessgamedev">Useless Game Dev Youtube Channel</a></h3>
+				<h4>Unity, C#</h4>
+				<p>Where I make small game prototypes and program silly ideas I have.<br />Helps me scratch the itch to work on new stuff, learn and explore.</p>
+			</div>
+		</div>
+		<!--
 		<div class="project">
 			<img class="logo" src="img/hamsterstellar.jpg" />
 			<div class="job">
@@ -235,7 +254,7 @@
 				<p>Permet de créer votre propre version de la tapisserie de Bayeux, exportée en JPG ou GIF animé.</p>
 			</div>
 		</div>
-
+-->
 <!--
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
